# gendiff

./: .gitignore  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: Check lint.yml  check_lint_ tests.yml
gendiff/: __init__.py
gendiff/cli/: __init__.py  cli.py
gendiff/diff_builder/: __init__.py  data_loader.py  data_parser.py  diff_creator.py  diff_generator.py
gendiff/engine/: prog.py
gendiff/formatter/: __init__.py  json.py  plain.py  renderer.py  stylish.py
gendiff/generator/: diff_generator.py
gendiff/program/: data_parcer.py  data_parser.py  diff_creator.py  diff_generator.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_cli.py  test_data_loader.py  test_data_parcer.py  test_diff_generator.py  test_generate_diff.py
tests/fixtures/: plain_1.json  plain_result.txt
tests/fixtures/results/: format_json.txt  result_diff.txt
