[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "CLI utilite that make diff between two files"
authors = ["emp7yhead <artyomkropp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
