[tool.poetry]
name = "hexlet-code"
version = "0.6.0"
description = "CLI utilite that make diff between two files"
authors = ["emp7yhead <artyomkropp@gmail.com>"]
packages = [
    { include = "gendiff" },
]
[tool.poetry.dependencies]
python = "^3.8,<4.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
